tests/ui/fail/log_interpolated_unsatisfied_trait_debug.stderr
error[E0277]: `Input` doesn't implement `Debug`
  --> $DIR/log_interpolated_unsatisfied_trait_debug.rs:10:26
   |
10 |     emit!("Text \"and\" {#[debug] a: Input} and more");
   |                          ^^^^^^^^^^^^^^^^^ `Input` cannot be formatted using `{:?}`
   |
   = help: the trait `Debug` is not implemented for `Input`
   = note: add `#[derive(Debug)]` or manually implement `Debug`
   = note: required because of the requirements on the impl of `emit_rt::capture::Capture<emit_rt::capture::CaptureDebug>` for `Input`
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
